--- a/demos/01-ecal-helloworld/CMakeLists.txt
+++ b/demos/01-ecal-helloworld/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required(VERSION 3.0)
 project(01-ecal-helloworld)
 
+# cmake set
 set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
+# find package
 find_package(eCAL REQUIRED)
 
 # helloworld_puber
